syntax = "proto3";

package pb;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "pb_enum.proto";

message EchoParam {
    string text = 1;
}

message EchoResponse {
    bool done =1;
    string text = 2;
}

message CheckUserNameParam {
    string username = 1;
}

message CheckUserNameResponse {
    bool is_available =1;
    string username = 2;
    string show_message = 3;
}

service RPC_General {
    rpc Echo (EchoParam) returns (EchoResponse);
    rpc CheckUserName (CheckUserNameParam) returns (CheckUserNameResponse);

}

