syntax = "proto3";

package pb;
option java_package = "ir.ms.pb";
//option java_outer_classname = "PB2";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;

option go_package = "x";

//import "pb_enum.proto";

message GetUsers1Param {
   
}

message GetUsers1Response {

}

service RPC_Sample {
    rpc GetUsers1 (GetUsers1Param) returns (GetUsers1Response);

}

